--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,20 +16,9 @@ version: "3.1"
 
 volumes:
     db-data:
+    redisdata:
 
 services:
-
-    django:
-      build: ./docker/django
-      container_name: ${PROJECT_NAME}-django
-      command: python3 manage.py runserver 0.0.0.0:8000
-      volumes:
-        - .:/application
-      ports:
-        - "8000:8000"
-      depends_on:
-        - mysql
-        - redis
 
     mysql:
       image: mysql:5.6
@@ -46,4 +35,21 @@ services:
         - "8306:3306"
 
     redis:
-      image: "redis:alpine"
+      image: "redis"
+      restart: unless-stopped
+      expose:
+          - "6379"
+      volumes:
+          - redisdata:/data
+
+    django:
+      build: ./docker/django
+      container_name: ${PROJECT_NAME}-django
+      command: python3 manage.py runserver 0.0.0.0:8000
+      volumes:
+        - .:/application
+      ports:
+        - "8000:8000"
+      depends_on:
+        - mysql
+        - redis
